<resources>
    <string name="app_name">Dexterous Music</string>

    <!-- ************** Permission Strings *********************************  -->

    <!-- Storage Permission -->
    <string name="permission_storage_denied">You have denied Permission to storage, now we can\'t play your SD card music</string>
    <string name="permission_storage_never_ask">Thanks Enjoy your music</string>
    <string name="permission_storage_rationale">Permission to access storage</string>
    <string name="button_allow">Agree</string>
    <string name="button_deny">Disagree</string>


    <!-- ************ contentDescription Strings *********************************** -->

    <!-- Notification-->
    <string name="notification_button_play">Play</string>
    <string name="notification_button_skip">Skip</string>
    <string name="title_activity_splash">Splash</string>


    <!-- Home Screen-->
    <string name="albums">Albums</string>
    <string name="artist">Artist</string>
    <string name="all_songs">All Songs</string>
    <string name="recent_played">Recent Played</string>
    <string name="all_plasy_list">Play Lists</string>


    <!--Menu  -->
    <string name="play_now">Play Now</string>
    <string name="play_next">Play Next</string>
    <string name="add_to_playlist">Add To Playlist</string>
    <string name="search">Search</string>
    <string name="edit_meta_data">Edit Meta Data</string>
    <string name="use_as_ringtone">Use as RingTone</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="title_activity_album_fragment">AlbumFragment</string>
    <string name="action_settings">Settings</string>

    <!--Settings -->
    <string name="hide_small_clips_duration">Hide Small Clips Duration : </string>
    <string name="sec">sec</string>
    <string name="music_play_on_inset_headset">Music Play On Inset Headset</string>
    <string name="music_repeat_mode_type">Music Repeat Mode Type</string>
    <string name="music_shuffle_mode">Music Shuffle Mode</string>
    <string name="mudic_notification">Music Notification</string>
    <string-array name="spinner_itmes">
        <item>Current Song</item>
        <item>All Songs</item>
    </string-array>
    <string name="about_us">About Us</string>
   <string name="send_feedback">Send Feedback</string>
    <string name="rate_us">Rate Us</string>

</resources>
