<menu xmlns:android = "http://schemas.android.com/apk/res/android"
      xmlns:app = "http://schemas.android.com/apk/res-auto"
      xmlns:tools = "http://schemas.android.com/tools"
      tools:context = ".activity.MainActivity" >
    <item
        android:id = "@+id/action_play_now"
        android:orderInCategory = "100"
        android:title = "@string/play_now"
        app:showAsAction = "never" />
    <item
        android:id = "@+id/action_play_next"
        android:orderInCategory = "100"
        android:title = "@string/play_next"
        app:showAsAction = "never" />
    <item
        android:id = "@+id/action_add_to_play_list"
        android:orderInCategory = "100"
        android:title = "@string/add_to_playlist"
        app:showAsAction = "never" />
    <item
        android:id = "@+id/action_use_as_ringtone"
        android:orderInCategory = "100"
        android:title = "@string/use_as_ringtone"
        app:showAsAction = "never" />
    <item
        android:id = "@+id/action_delete"
        android:orderInCategory = "100"
        android:title = "@string/delete"
        app:showAsAction = "never" />
    <item
        android:id = "@+id/action_edit_meta_data"
        android:orderInCategory = "100"
        android:title = "@string/edit_meta_data"
        app:showAsAction = "never" />
    <item
        android:id = "@+id/action_share"
        android:orderInCategory = "100"
        android:title = "@string/share"
        app:showAsAction = "never" />
    <item
        android:id = "@+id/action_search"
        android:orderInCategory = "100"
        android:title = "@string/search"
        app:showAsAction = "never" />
</menu >
