<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/hide_small_clips_duration"
        android:textSize="@dimen/text_medium"/>
    <EditText
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:inputType="number"
        android:textSize="@dimen/text_medium"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/sec"
         android:textSize="@dimen/text_medium"/>
    </LinearLayout>
<View
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:background="#FFF"
    android:layout_marginLeft="@dimen/margin_left"
    android:layout_marginRight="@dimen/margin_right">

</View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/music_play_on_inset_headset"
            android:textSize="@dimen/text_medium"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FFF">
    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/music_repeat_mode_type"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/music_shuffle_mode"/>
        <ToggleButton
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mudic_notification"/>
        <ToggleButton
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>